# redkite

./: .gitattributes  .gitignore  README.md  setup.cfg
src/munir/: _version.py  adapter.py  controller.py  fp_controller.py  monitored_ipc_channel.py  munir_manager.py  odin_data.py  odin_data_util.py  util.py
src/munir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/redkite/: _version.py  adapter.py  controller.py  util.py
test/config/: odin_data_configs.json  test_munir.cfg  test_munir_fp.cfg  test_redkite.cfg
test/static/: .env.development  .env.production  package-lock.json  package.json
test/static/src/: App.js
