[metadata]
name = munir
author = Tim Nicholls
author_email = tim.nicholls@stfc.ac.uk

[options]
package_dir=
    =src
packages=find:
install_requires =
    odin-data @ git+https://github.com/odin-detector/odin-data@1.10.1#subdirectory=python

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    pytest-cov
    tox
    flake8
    flake8-docstrings

[versioneer]
VCS = git
style = pep440
versionfile_source = src/munir/_version.py
versionfile_build = munir/_version.py
tag_prefix=

[flake8]
max-line-length = 100
extend-ignore = E203, W503
